# MaterialX

./: CMakeLists.txt  README.md
examples/: hlsl_example.cpp
libraries/lights/genhlsl/: lights_genhlsl_impl.mtlx
libraries/pbrlib/genhlsl/: pbrlib_genhlsl_impl.mtlx
libraries/pbrlib/genhlsl/lib/: mx_closure_type.hlsl  mx_environment_fis.hlsl  mx_environment_none.hlsl  mx_environment_prefilter.hlsl  mx_generate_albedo_table.hlsl  mx_generate_prefilter_env.hlsl  mx_shadow.hlsl  mx_shadow_platform.hlsl  mx_transmission_opacity.hlsl  mx_transmission_refract.hlsl
libraries/stdlib/genhlsl/: mx_noise2d_float.hlsl  mx_noise2d_vector2.hlsl  mx_noise2d_vector3.hlsl  mx_noise2d_vector4.hlsl  mx_noise3d_float.hlsl  mx_noise3d_vector2.hlsl  mx_noise3d_vector3.hlsl  mx_noise3d_vector4.hlsl  stdlib_genhlsl_impl.mtlx
libraries/stdlib/genhlsl/lib/: mx_geometry.hlsl  mx_hextile.hlsl  mx_hsv.hlsl  mx_math.hlsl  mx_noise.hlsl  mx_transform_uv.hlsl  mx_transform_uv_vflip.hlsl
source/MaterialXGenHlsl/: CMakeLists.txt  HlslResourceBindingContext.cpp  HlslResourceBindingContext.h  HlslShaderGenerator.cpp  HlslShaderGenerator.h  HlslSyntax.cpp  HlslSyntax.h  README.md
source/MaterialXGenHlsl/Nodes/: SurfaceNodeHlsl.h
source/MaterialXRenderHlsl/: CMakeLists.txt  Dx12Framebuffer.cpp  Dx12Framebuffer.h  Dx12GeometryHandler.cpp  Dx12GeometryHandler.h  Dx12PipelineStateObject.cpp  Dx12Renderer.cpp  Dx12Renderer.h  Dx12State.cpp  Dx12State.h  Dx12TextureHandler.cpp  Dx12TextureHandler.h  Export.h  HlslMaterial.cpp  HlslMaterial.h  HlslProgram.cpp  HlslProgram.h  TextureBakerHlsl.cpp  TextureBakerHlsl.h
